# DesignPatterns

./: CMakeLists.txt
AbstractFactoryPattern/: CMakeLists.txt  Cheese.cpp  Cheese.h  Dough.cpp  Dough.h  MarinaraSauce.cpp  MarinaraSauce.h  NYPizzaIngredientFactory.cpp  NYPizzaIngredientFactory.h  NYPizzaStore.cpp  NYStyleCheesePizza.cpp  NYStyleCheesePizza.h  Pizza.cpp  Pizza.h  PizzaIngredientFactory.cpp  PizzaIngredientFactory.h  PizzaStore.cpp  ReggianoCheese.cpp  ReggianoCheese.h  Sauce.cpp  Sauce.h  ThinCrustDough.cpp  ThinCrustDough.h  main.cpp
AdapterPattern/: CMakeLists.txt  Duck.cpp  Duck.h  MallardDuck.cpp  MallardDuck.h  Turkey.cpp  Turkey.h  TurkeyAdapter.cpp  TurkeyAdapter.h  WildTurkey.cpp  WildTurkey.h  main.cpp
CommandPattern/: CMakeLists.txt  Command.h  Light.cpp  Light.h  LightOffCommand.cpp  LightOffCommand.h  LightOnCommand.cpp  LightOnCommand.h  NoCommand.cpp  NoCommand.h  RemoteControlWithUndo.cpp  RemoteControlWithUndo.h  main.cpp
DecoratorPattern/: Beverage.cpp  Beverage.h  CMakeLists.txt  CondimentDecorator.cpp  CondimentDecorator.h  Espresso.cpp  Espresso.h  HouseBlend.cpp  HouseBlend.h  Mocha.cpp  Mocha.h  main.cpp
FacadePattern/: CMakeLists.txt  DVD.cpp  DVD.h  HomeTheaterTestDrive.cpp  HomeTheaterTestDrive.h  Screen.cpp  Screen.h  main.cpp
FactoryPattern/: CMakeLists.txt  ChicagoPizzaStore.cpp  (+11 more)
StrategyPattern/: CMakeLists.txt  Duck.cpp  Duck.h  FlyBehavior.cpp  FlyBehavior.h  FlyNoWay.cpp  FlyNoWay.h  FlyWithWings.cpp  FlyWithWings.h  MallardDuck.cpp  MallardDuck.h  ModelDuck.cpp  ModelDuck.h  MuteQuack.cpp  MuteQuack.h  QuackBehavior.cpp  QuackBehavior.h  Squeak.cpp  Squeak.h  main.cpp
(+75 files in other folders)
